--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"id": "com.athom.philipsair",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"compatibility": ">=1.5.0",
 	"sdk": 2,
 	"name": {
@@ -173,9 +173,78 @@
 			{
 				"id": "measure_pm25_changed",
 				"title": {
-					"en": "Target pm2.5 changed"
-				}
-			}
+				  "en": "PM2.5 changed"
+				},
+				"tokens": [
+				  {
+					"name": "measure_pm25",
+					"type": "number",
+					"title": {
+					  "en": "value"
+					},
+					"example": {
+					  "en": "50"
+					}
+				  }
+				],
+				"args": [
+				  {
+					"name": "device",
+					"type": "device",
+					"filter": "driver_id=device"
+				  }
+				]
+			  },
+			  {
+				"id": "measure_iaql_changed",
+				"title": {
+				  "en": "IAQL changed"
+				},
+				"tokens": [
+				  {
+					"name": "measure_iaql",
+					"type": "number",
+					"title": {
+					  "en": "value"
+					},
+					"example": {
+					  "en": "1"
+					}
+				  }
+				],
+				"args": [
+				  {
+					"name": "device",
+					"type": "device",
+					"filter": "driver_id=device"
+				  }
+				]
+			  },
+			  {
+				"id": "measure_tvoc_changed",
+				"title": {
+				  "en": "TVOC changed"
+				},
+				"tokens": [
+				  {
+					"name": "measure_tvoc",
+					"type": "number",
+					"title": {
+					  "en": "value"
+					},
+					"example": {
+					  "en": "1"
+					}
+				  }
+				],
+				"args": [
+				  {
+					"name": "device",
+					"type": "device",
+					"filter": "driver_id=device"
+				  }
+				]
+			  }
 		],
 		"conditions": [
 			{
