--- a/app.json
+++ b/app.json
@@ -117,7 +117,8 @@
 			"max": 12,
 			"decimals": 0,
 			"insights": true,
-			"uiComponent": "sensor"
+			"uiComponent": "sensor",
+			"icon": "/assets/images/flower.svg"			
 		},
 		"measure_tvoc": {
 			"type": "number",
@@ -133,7 +134,8 @@
 			"max": 20,
 			"decimals": 0,
 			"insights": true,
-			"uiComponent": "sensor"
+			"uiComponent": "sensor",
+			"icon": "/assets/images/co2.svg"
 		},
 		"target_humidity": {
 			"type": "enum",
@@ -224,7 +226,8 @@
 				"en": "Water level"
 			},
 			"getable": true,
-			"setable": false
+			"setable": false,
+			"icon": "/assets/images/water-tank.svg"	
 		},
 		"onoff": {
 			"type": "boolean",
