--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"id": "com.athom.philipsair",
-	"version": "0.0.22",
+	"version": "0.0.23",
 	"compatibility": ">=1.5.0",
 	"sdk": 2,
 	"name": {
@@ -395,7 +395,7 @@
 					{
 						"name": "device",
 						"type": "device",
-						"filter": "driver_id=device|device2"
+						"filter": "driver_id=device|device2|deviceCoap"
 					}
 				]
 			},
@@ -440,7 +440,7 @@
 					{
 						"name": "device",
 						"type": "device",
-						"filter": "driver_id=device|device2"
+						"filter": "driver_id=device|device2|deviceCoap"
 					},
 					{
 						"name": "which",
@@ -489,7 +489,7 @@
 					{
 						"name": "device",
 						"type": "device",
-						"filter": "driver_id=device|device2"
+						"filter": "driver_id=device|device2|deviceCoap"
 					}
 				]
 			},
@@ -514,7 +514,7 @@
 					{
 						"name": "device",
 						"type": "device",
-						"filter": "driver_id=device|device2"
+						"filter": "driver_id=device|device2|deviceCoap"
 					}
 				]
 			},
@@ -638,7 +638,7 @@
 				{
 					"name": "device",
 					"type": "device",
-					"filter": "driver_id=device|device2"
+					"filter": "driver_id=device|device2|deviceCoap"
 				}
 			  ]
 			},
@@ -651,7 +651,7 @@
 					{
 						"name": "device",
 						"type": "device",
-						"filter": "driver_id=device|device2"
+						"filter": "driver_id=device|device2|deviceCoap"
 					}
 				  ]
 			},
@@ -664,7 +664,7 @@
 				  {
 					  "name": "device",
 					  "type": "device",
-					  "filter": "driver_id=device|device2"
+					  "filter": "driver_id=device|device2|deviceCoap"
 				  },
 				  {
 					"name": "mode",
@@ -713,7 +713,7 @@
 				  {
 					  "name": "device",
 					  "type": "device",
-					  "filter": "driver_id=device|device2"
+					  "filter": "driver_id=device|device2|deviceCoap"
 				  },
 				  {
 					"name": "mode",
@@ -779,7 +779,7 @@
 				}
 			],
 			"name": {
-				"en": "Purifier"
+				"en": "Purifier, 2019"
 			},
 			"class": "other",
 			"energy": {
@@ -838,7 +838,7 @@
 				}
 			],
 			"name": {
-				"en": "Purifier and Humidifier"
+				"en": "Purifier, Humidifier 2019"
 			},
 			"class": "other",
 			"energy": {
@@ -871,6 +871,65 @@
 			"images": {
 				"large": "/drivers/device2/assets/images/large.png",
 				"small": "/drivers/device2/assets/images/small.png"
+			}
+		},
+		{
+			"id": "deviceCoap",
+			"pair": [
+				{
+					"id": "pair"
+				}
+			],
+			"settings": [
+				{
+					"type": "group",
+					"label": {
+						"en": "General settings"
+					},
+					"children": [
+						{
+							"id": "ipkey",
+							"type": "text",
+							"label": {
+								"en": "Philips Air device IP address"
+							},
+							"value": "",
+							"hint": {
+								"en": "Enter the IP address key of your Philips Air purifier"
+							}
+						}
+					]
+				}
+			],
+			"name": {
+				"en": "Purifier, 2020"
+			},
+			"class": "other",
+			"energy": {
+				"approximation": {
+					"usageConstant": 20
+				}
+			},
+			"capabilities": [
+				"latest_retrieval_date",
+				"measure_pm25",
+				"measure_iaql",
+				"measure_tvoc",
+				"pre_filter_clean",
+				"carbon_filter_replace",
+				"hepa_filter_replace",
+				"product",
+				"light_intensity",
+				"onoff",
+				"button_lights",
+				"purifier_mode",
+				"display_mode",
+				"child_lock",
+				"fan_speed"
+			],
+			"images": {
+				"large": "/drivers/device/assets/images/large.png",
+				"small": "/drivers/device/assets/images/small.png"
 			}
 		}
 	]
