--- a/app.json
+++ b/app.json
@@ -33,6 +33,14 @@
 		"name": "Edwin Biemond",
 		"email": "biemond@gmail.com"
 	},
+	"contributors": {
+		"developers": [
+		  {
+			"name": "Radoslav Gerganov, https://github.com/rgerganov/py-air-control"
+		  }
+		]
+	},
+	"homeyCommunityTopicId": 32151,	
 	"capabilities": {
 		"latest_retrieval_date": {
 			"type": "string",
@@ -370,7 +378,7 @@
 		"display_mode": {
 			"type": "enum",
 			"title": {
-				"en": "Display mode PM2.5/IAI"
+				"en": "Display mode"
 			},
 			"getable": true,
 			"setable": true,
@@ -389,6 +397,36 @@
 						"en": "IAI"
 					}
 				}
+			]
+		},
+		"display_mode_ph": {
+			"type": "enum",
+			"title": {
+				"en": "Display mode"
+			},
+			"getable": true,
+			"setable": true,
+			"uiComponent": "picker",
+			"uiQuickAction": true,
+			"values": [
+				{
+					"id": "1",
+					"title": {
+						"en": "PM2.5"
+					}
+				},
+				{
+					"id": "0",
+					"title": {
+						"en": "IAI"
+					}
+				},
+				{
+					"id": "3",
+					"title": {
+						"en": "Humidity"
+					}
+				}				
 			]
 		},
 		"timer_remaining": {
@@ -993,7 +1031,7 @@
 				"onoff",
 				"button_lights",
 				"purifier_mode",
-				"display_mode",
+				"display_mode_ph",
 				"child_lock",
 				"fan_speed",
 				"func_mode",
@@ -1120,7 +1158,7 @@
 				"onoff",
 				"button_lights",
 				"purifier_mode",
-				"display_mode",
+				"display_mode_ph",
 				"child_lock",
 				"fan_speed",
 				"func_mode",
